Prevent the iframe of Google Maps from overflowing (#641)

--- a/components/50-50/50-50.less
+++ b/components/50-50/50-50.less
@@ -142,6 +142,10 @@
 		max-width: 100%;
 		height: auto;
 	}
+
+	iframe {
+		width: 100%;
+	}
 }
 
 .fifty-fifty-content-left {
